<resources>
    <string name="app_name">Course Advisor Home</string>
    <string name="course_selection">Course Selection</string>

    <string name="semester">Current Semester</string>

    <string name="course_1">Course 1</string>
    <string name="course">Course 4</string>
    <string name="course_2">Course 2</string>
    <string name="course_3">Course 3</string>
    <string name="credits">0</string>

    //string for passing semester id
    <string name="SEMESTER_SELECTED">SEMESTER_SELECTED</string>

    <string name="home_button">Check Progress</string>

    <string name="courseName">Sample Course Name</string>
    <string name="courseID">CSC 100</string>
    <string name="creditHours">4 credits </string>
    <string name="majorName">Computer Science</string>

    // semester titles for home page
    <string name="s1">Semester 1</string>
    <string name="s2">Semester 2</string>
    <string name="s3">Semester 3</string>
    <string name="s4">Semester 4</string>
    <string name="s5">Semester 5</string>
    <string name="s6">Semester 6</string>
    <string name="s7">Semester 7</string>
    <string name="s8">Semester 8</string>

    // Semester UI strings
    <string name="class_1">Class 1</string>
    <string name="class_2">Class 2</string>
    <string name="class_3">Class 3</string>
    <string name="class_4">Class 4</string>
    <string name="class_5">Class 5</string>
    <string name="class_6">Class 6</string>
    <string name="addclass">Add class</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    //Feedback UI strings
    <string name="otherLeft">Needed: 64</string>
    <string name="majorLeft">Needed: 44</string>
    <string name="totalLeft">Needed: 128</string>
    <string name="Taken">Completed: 0</string>
    <string name="majorCredits">Major Credits</string>
    <string name="outsideCredits">Outside Credits</string>
    <string name="totalCredits">Total Credits</string>
</resources>
